force-app/main/default/objects/Cricketer__c/Cricketer__c.object-meta.xml
<CustomObject>
    <label>Cricketer</label>
    <nameField>
        <label>Cricketer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cricketers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>