force-app/main/default/objects/Cricketer__c/fields/Awards__c.field-meta.xml
<CustomField>
    <fullName>Awards__c</fullName>
    <label>Awards</label>
    <length>50</length>
    <type>Text</type>
</CustomField>