force-app/main/default/objects/Cricketer__c/fields/Born__c.field-meta.xml
<CustomField>
    <fullName>Born__c</fullName>
    <label>Born</label>
    <type>Date</type>
</CustomField>