force-app/main/default/objects/Cricketer__c/fields/Date_of_Joined__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joined__c</fullName>
    <label>Date of Joined</label>
    <type>Date</type>
</CustomField>