force-app/main/default/objects/Cricketer__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zeland</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>West Indies</fullName>
            </value>
            <value>
                <fullName>Shrilanka</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Zimbabwe</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>