force-app/main/default/objects/Cricketer__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <label>Spouse</label>
    <length>30</length>
    <type>Text</type>
</CustomField>